# RAG

./: 0.1.7  pyproject.toml
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
