[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter==1.0.0",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "langchain-core>=0.1.23",
    "notebook==7.0.6",
    "pymupdf==1.23.8",
    "pypdf==3.17.1",
]
